
set(TARGET_NAME injector)

set(CORE_DIR ${PROJECT_SOURCE_DIR}/src/core)
set(MISC_DIR ${PROJECT_SOURCE_DIR}/src/misc)
set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/third_party)

file(GLOB SRC_CORE ${CORE_DIR}/*.cpp)
file(GLOB HEADER_CORE ${CORE_DIR}/*.h)
file(GLOB SRC_MISC ${MISC_DIR}/*.cpp)
file(GLOB HEADER_MISC ${MISC_DIR}/*.h)

file(GLOB SRC_INJECTOR ./*.cpp)
file(GLOB HEADER_INJECTOR ./*.h)

file(GLOB SRC_CORE_OS ${CORE_DIR}/${OS_SPECIFIC_DIR_NAME}/*.cpp)
file(GLOB SRC_MISC_OS ${MISC_DIR}/${OS_SPECIFIC_DIR_NAME}/*.cpp)
file(GLOB SRC_INJECTOR_OS ./${OS_SPECIFIC_DIR_NAME}/*.cpp)

set(ALL_SRC_HDR_FILES
  ${SRC_CORE}
  ${HEADER_CORE}
  ${SRC_MISC}
  ${HEADER_MISC}
  ${SRC_INJECTOR}
  ${HEADER_INJECTOR}
  ${SRC_CORE_OS}
  ${SRC_MISC_OS}
  ${SRC_INJECTOR_OS}
)

set(THIRD_PARTY_FILES
  ${THIRD_PARTY_DIR}/cmdline/cmdline.h
)

source_group(TREE ${PROJECT_SOURCE_DIR} PREFIX "Source" FILES ${ALL_SRC_HDR_FILES} ${THIRD_PARTY_FILES})

SET_COMMON_COMPILER_FLAGS()

add_executable(${TARGET_NAME} ${ALL_SRC_HDR_FILES} ${THIRD_PARTY_FILES})

target_include_directories(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR})

target_compile_definitions(${TARGET_NAME}
  PRIVATE ${EUSTIA_COMPILER_DEFINES}
)