
set(TARGET_NAME core)

set(CURRENT_DIR .)

file(GLOB SRC_FILES ${CURRENT_DIR}/*.cpp)
file(GLOB HEADER_FILES ${CURRENT_DIR}/*.h)
file(GLOB SRC_FILES_OS ${CURRENT_DIR}/${OS_SPECIFIC_DIR_NAME}/*.cpp)

set(ALL_SRC_HDR_FILES
  ${SRC_FILES}
  ${HEADER_FILES}
  ${SRC_FILES_OS}
)

source_group(TREE ${PROJECT_SOURCE_DIR} PREFIX "Source" FILES ${ALL_SRC_HDR_FILES})

SET_COMMON_COMPILER_FLAGS()

add_library(${TARGET_NAME} STATIC ${ALL_SRC_HDR_FILES})

target_include_directories(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR})

target_compile_definitions(${TARGET_NAME}
  PRIVATE ${EUSTIA_COMPILER_DEFINES}
)
